# pytorch-project-base

./: .gitignore  README.md  config.json  custom_loader.json  custom_schedule.json  get_available_models.py  pyproject.toml  requirements.txt  setup.cfg  skelton.json  train.py
src/pytorch-project-base/: __init__.py  main.py
src/pytorch-project-base/base/: __init__.py  base_data_loader.py  base_dataloader.py  base_model.py  base_trainer.py  base_weblogger.py
src/pytorch-project-base/database/: database.py
src/pytorch-project-base/dataloader/: __init__.py  customloaders.py  dataloaders.py
src/pytorch-project-base/dataloader/preprocessing/: loaders.py
src/pytorch-project-base/dataloader/preprocessing/dct/: dct_utils.py
src/pytorch-project-base/logger/: log_setting.json  web_logger.py
src/pytorch-project-base/models/: __init__.py  custom_vit.py  dynamic_range_vit.py  fft_vit.py  mlp.py  movileNetV1.py  smallVGG.py  vit.py
src/pytorch-project-base/models/convolution/: __init__.py  conv.py  ds_conv.py  fc.py
src/pytorch-project-base/models/transformer/: attention.py  ffn.py  transformer.py
src/pytorch-project-base/trainer/: __init__.py  trainer.py  trainer_db_hf.py  trainer_hf_save.py
src/pytorch-project-base/utils/: __init__.py  criterion.py  custom_scheduler.py  json_config.py  optimizer.py  registry.py  scheduler.py
test/unit_test/: criterion_test.py  dataloader_test.py  optimizer_test.py  scheduler_test.py
training-config/: cifar100_movilenet.json  cifar10_smallvgg.json  deit.json  fft_vit.json  mnist_mlp.json  swin_transformer.json  vit_t_16.json
(+1 files in other folders)
