[metadata]
name = pytorch-project-base
version = 0.1.0
description = A generic trainer for machine learning models
author = KAWAI Syusei
license = MIT
keywords = machine learning, training, AI

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.10
    numpy>=1.21